testsuite/tests/module/mod182.stderr
mod182.hs:5:16: error:
    Found ‘qualified’ in postpositive position.
    To allow this, enable language extension 'ImportQualifiedPost'
