testsuite/tests/module/mod182.hs

-- If 'ImportQualifiedPost' is not enabled 'qualified' can not appear in
-- postpositive position.

import Prelude qualified

main = Prelude.undefined
